# SPARK

./: AlanineDipeptide.ipynb  AlanineDipeptideParallelTempering.ipynb  Dimer.ipynb  GenericTests.ipynb  README.md  output_0.xyz  utils.py  wikipedia_rdf.csv
.ipynb_checkpoints/: AlanineDipeptide_EnergyCheck-checkpoint.ipynb  GenericTests-checkpoint.ipynb  LJNVE-checkpoint.ipynb  utils-checkpoint.py
_backup_pre_package_20260413/: pyproject.toml
_backup_pre_package_20260413/forces/: twobody.py
_backup_pre_package_20260413/integrators/: NVE.py
_backup_pre_package_20260413/system/: system.py
examples/AlanineDipeptide/: AlanineDipeptide.ipynb  AlanineDipeptideParallelTempering.ipynb  alanine_tom.py  output_0.xyz
examples/DisorderedStructureMatching/: LJLearning.ipynb
examples/EwaldMoltenSalt/: MoltenSalt.ipynb  MoltenSaltLearning.ipynb  all_rdfs.npz
examples/GeneralUsage/: Dimer.ipynb  GenericTests.ipynb
examples/LJSolidFreeEnergy/: crooks_results.npz  einstein_nvt.py  einstein_nvt_jarzynski.py  lj_jarzynski_3849988.out  lj_ti_3845160.err  lj_ti_3845160.out  plot_histograms.py  plot_results.py  run_jarzynski.sbatch  run_ti.sbatch  ti_results.npz
examples/LennardJonesFluid/: LJNVE.ipynb
forces/: composite.py  onebody.py  twobody.py
forces/.ipynb_checkpoints/: fourbody-checkpoint.py  threebody-checkpoint.py  twobody-checkpoint.py
integrators/: NVT.py  ParallelTempering.py
integrators/.ipynb_checkpoints/: NVE-checkpoint.py
spark/: utils.py
spark/forces/: composite.py  fourbody.py  onebody.py  threebody.py  twobody.py
system/: system.py
(+24 files in other folders)
