[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spark-md"
version = "0.1.0"
description = "Statistical Physics Autodiff Research Kit"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["forces", "integrators", "system"]
py-modules = ["utils"]
